# Semantic_Search_Assistant

./: BUTTON_SOLUTION_FINAL.md  CLIENT_SETUP_INSTRUCTIONS.md  COMPLETE_SOLUTION.md  CORRECT_WORKFLOW_FINAL.md  DEPLOYMENT_GUIDE.md  FINAL_COMPLETE_SOLUTION.md  FINAL_CORRECT_IMPLEMENTATION.md  FIXED_WORKFLOW_TEST.md  HIGHLIGHT_CAPTURE_FIXES.md  HOTKEY_CHANGE_NOTICE.md  PERFECT_IMPLEMENTATION_COMPLETE.md  PERFECT_WORKFLOW_IMPLEMENTED.md  PROFESSIONAL_TOOL_COMPLETE.md  PROJECT_STARTUP_GUIDE.md  README.md  README_COMPLETE.md  README_EXECUTABLE.md  README_REALTIME.md  REALTIME_INSTRUCTIONS.md  START_PROJECT.bat  START_SEMANTIC_SEARCH_COMPLETE.bat  SemanticSearchAssistant.spec  WORKING_IMPLEMENTATION_GUIDE.md  api_service.py  app.py  auto_indexer.py  background_processor.py  build_app.py  build_desktop_app.py  build_exe.bat  build_executable.py  captured_highlights.json  citation_manager.py  clean_verification.py  cleanup_db.py  cleanup_project.py  clear_all_data.py  clipboard_monitor.py  clipboard_test.py  config.json  (+82 more)
data/: citations.json
electron-app/: package-lock.json  package.json
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/vite-project/src-tauri/: Cargo.toml  tauri.conf.json
highlights/: all_highlights.jsonl  highlight_highlight_1754602782_3231.json
sample_documents/: notes.md  sample.docx
test_docs/: chapter1.txt  chapter2.txt  chapter3.txt  example_document.md  hi.txt  machine_learning.txt  productivity_guide.md  programming_concepts.txt  realtime_test.txt  sample.txt  technology_notes.txt  test_indexing.txt  (+1 more)
(+344 files in other folders)
